# fosskers.ca

./: .gitattributes  .gitignore  Makefile  Procfile  README.org  app.json  fosskers.cabal  js-stack.yaml  package.yaml  stack.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yaml  rust.yml
.well-known/: brave-rewards-verification.txt
assets/: al_bhed.js  app.min.js  cv.html  cv.org  fosskers.css  game_of_life.js  game_of_life_bg.wasm  kate.css  love.css  love.js  love_bg.wasm  wasm_tests.js  wasm_tests_bg.wasm
assets/code/: al_bhed_bg.wasm  drj.js  drj_bg.wasm  game_of_life.js  love.js  love_bg.wasm  otama.js  seed_effects.js  seed_effects_bg.wasm  twitch.js  twitch_bg.wasm  web_effects.js  web_effects_bg.wasm
assets/css/: animations.css  bulma.min.css  drj.css  fosskers.css  fosskers.scss  kate.css  kate.scss  love.css  org-theme.css
blog/: antaiji-en.org  arc-patterns-en.org  base-en.org  beam-migration-en.html  beam-migration-en.org  cl-type-quirks-en.org  cl-windows-en.org  common-lisp-en.org  container-sizes-en.html  container-sizes-en.org  contributing-to-emacs-en.org  daibutsu-en.org  daibutsu-jp.org  deploying-haskell-en.html  deploying-haskell-en.org  deploying-haskell-jp.html  deploying-haskell-jp.org  disk-encryption-en.org  emacs-c-lisp-en.org  fp-propaganda-en.org  github-ci-en.org  haskell-software-dev-en.org  haskell-software-dev-jp.org  henro-en.org  herbs-en.org  hiring-programmers-en.org  how-software-companies-die-en.org  kanji-en.html  kanji-en.org  kanji-jp.html  kanji-jp.org  kypver-en.org  love-letter-en.org  mapalgebra-en.html  mapalgebra-en.org  nix-en.html  nix-en.org  nix-jp.html  nix-jp.org  nix.org  (+26 more)
blog/old/: purescript-en.org  purescript-jp.org
bridge/: Bridge.hs  bridge.cabal  package.yaml
demos/al-bhed/: Cargo.toml
demos/al-bhed/src/: lib.rs
demos/game-of-life/: Cargo.toml
demos/game-of-life/src/: lib.rs
demos/web-effects/: Cargo.toml
lib/: Common.hs  Foo.hs  Org.hs  Types.hs  fosskers.cabal  package.yaml
lib/Fosskers/: Common.hs  Kanji.hs  Org.hs  XML.hs
lib/test/: Test.hs
org/: about-en.org  about-jp.org  cv-en.org  cv-jp.org
papers/: what-it-sounds-like.typ
rust/: Cargo.toml
rust/al-bhed/: Cargo.toml
rust/game-of-life/: Cargo.toml
rust/love-letter/: Cargo.toml  Makefile.toml  index.html  love.scss
rust/seed-effects/: Cargo.toml  Makefile.toml
rust/seed-effects/src/: lib.rs
rust/twitch/: Cargo.toml
rust/twitch/src/: lib.rs
rust/web-effects/: Cargo.toml
rust/web-effects/src/: lib.rs
server/: Main.hs  Server.hs  doraemon.txt  iamacat.txt  package.yaml  rashomon.txt  server.cabal  sumo.txt
server/Fosskers/: Site.hs
server/Fosskers/Site/: About.hs  AlBhed.hs  Blog.hs  Bootstrap.hs  CV.hs  Drj.hs  GameOfLife.hs  Landing.hs  Love.hs  Otama.hs  SeedEffects.hs  Twitch.hs  WebEffects.hs
site/: Site.hs  package.json  psc-package.json
site/src/: About.purs  Bar.purs  Blog.purs  Bootstrap.purs  Content.purs  Kanji.purs  LangToggle.purs  Main.purs  Page.purs  Search.purs  Types.purs
site/test/: Main.purs
test/: Test.hs
tools/al-bhed/src/: lib.rs
tools/love-letter/: Cargo.toml  Makefile.toml  README.md  index.html  love.css  love.scss
tools/love-letter/src/: lib.rs
