cabal-version: 2.2
name:          fosskers
version:       1.0.0
synopsis:      My personal site.
description:   My personal site.
homepage:      https://github.com/fosskers/fosskers.ca
category:      Web
author:        Colin Woodbury
maintainer:    colin@fosskers.ca
license:       BSD-3-Clause
build-type:    Simple

common commons
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    LambdaCase
    OverloadedStrings
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities -funclutter-valid-hole-fits
    -fmax-relevant-binds=0

  build-depends:
    , aeson                >=1.2  && <1.5
    , base                 >=4.8  && <4.14
    , hourglass            ^>=0.2
    , kanji                ^>=3.4
    , lucid                ^>=2.9
    , megaparsec           >=7.0  && <9
    , nonempty-containers  ^>=0.3
    , org-mode             ^>=1.0
    , org-mode-lucid       ^>=1.0
    , rio                  ^>=0.1
    , servant              >=0.11 && <0.17
    , servant-lucid        >=0.7  && <0.10
    , servant-xml          ^>=1.0
    , xmlbf                >=0.3  && <0.7

library
  import:          commons
  hs-source-dirs:  lib
  exposed-modules:
    Fosskers.Common
    Fosskers.Kanji
    Fosskers.Org

  build-depends:   filepath ^>=1.4

-- test-suite fosskers-test
--   import:         commons
--   type:           exitcode-stdio-1.0
--   hs-source-dirs: test
--   main-is:        Test.hs
--   build-depends:
--     , fosskers
--     , tasty        ^>=1.2
--     , tasty-hunit  >=0.9 && <0.11

executable server
  import:         commons
  hs-source-dirs: server
  main-is:        Server.hs
  ghc-options:    -threaded -with-rtsopts=-N
  other-modules:
    Fosskers.Site
    Fosskers.Site.About
    Fosskers.Site.Blog
    Fosskers.Site.Bootstrap
    Fosskers.Site.CV

  build-depends:
    , errors            ^>=2.3
    , fosskers
    , generic-lens      >=1.1   && <1.3
    , lucid             ^>=2.9
    , microlens         ^>=0.4
    , optparse-generic  >=1.2   && <1.4
    , servant-server    >=0.11  && <0.17
    , shelly            >=1.7   && <1.10
    , these             ^>=1.0.1
    , time
    , transformers      ^>=0.5
    , unliftio          ^>=0.2
    , wai-extra         ^>=3.0
    , warp              >=3.2   && <3.4
