cabal-version: 2.2
name:          fosskers
version:       1.3.1
synopsis:      My personal site.
description:   My personal site.
homepage:      https://github.com/fosskers/fosskers.ca
category:      Web
author:        Colin Woodbury
maintainer:    colin@fosskers.ca
license:       BSD-3-Clause
build-type:    Simple

common commons
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities -funclutter-valid-hole-fits
    -fmax-relevant-binds=0

  build-depends:
    , aeson                 >=1.2 && <1.6
    , base                  >=4.8 && <4.15
    , base-prelude          >=1.3 && <1.5
    , containers
    , hourglass             ^>=0.2
    , lucid                 ^>=2.9
    , megaparsec            >=7.0 && <10
    , org-mode              ^>=1.1
    , org-mode-lucid        ^>=1.6
    , text
    , time
    , transformers          ^>=0.5
    , unordered-containers
    , xmlbf                 >=0.3 && <0.7

library
  import:          commons
  hs-source-dirs:  lib
  exposed-modules: Fosskers.Common
  build-depends:   filepath ^>=1.4

-- test-suite fosskers-test
--   import:         commons
--   type:           exitcode-stdio-1.0
--   hs-source-dirs: test
--   main-is:        Test.hs
--   build-depends:
--     , fosskers
--     , tasty        ^>=1.2
--     , tasty-hunit  >=0.9 && <0.11

executable server
  import:         commons
  hs-source-dirs: server
  main-is:        Main.hs
  ghc-options:    -threaded -with-rtsopts=-N -rtsopts
  other-modules:
    Fosskers.Site
    Fosskers.Site.About
    Fosskers.Site.AlBhed
    Fosskers.Site.Blog
    Fosskers.Site.CV
    Fosskers.Site.Drj
    Fosskers.Site.GameOfLife
    Fosskers.Site.Landing
    Fosskers.Site.Love
    Fosskers.Site.SeedEffects
    Fosskers.Site.Twitch
    Fosskers.Site.WebEffects

  build-depends:
    , binary
    , bytestring
    , directory             ^>=1.3
    , filepath              ^>=1.4
    , fosskers
    , http-types            ^>=0.12
    , microlens             ^>=0.4
    , mtl                   ^>=2.2
    , optparse-applicative  ^>=0.15
    , skylighting           >=0.8 && < 0.11
    , skylighting-lucid     ^>=1.0
    , wai                   ^>=3.2
    , wai-app-static        ^>=3.1
    , wai-extra             >=3.0 && < 3.2
    , warp                  >=3.2   && <3.4
