cabal-version: 2.2

name:           server
version:        1.0.0
synopsis:       My personal site.
description:    My personal site.
category:       Web
author:         Colin Woodbury
maintainer:     colin@fosskers.ca
license:        BSD-3-Clause
build-type:     Simple

extra-source-files:
    ../blog/container-sizes-en.org
    ../blog/deploying-haskell-en.org
    ../blog/deploying-haskell-jp.org
    ../blog/english-for-japanese-people-en.org
    ../blog/equality-doctrine-en.org
    ../blog/kanji-en.org
    ../blog/kanji-jp.org
    ../blog/kingdom-of-rivers-en.org
    ../blog/magic-is-real-en.org
    ../blog/mapalgebra-en.org
    ../blog/nix-en.org
    ../blog/nix-jp.org
    ../blog/purescript-en.org
    ../blog/purescript-jp.org
    ../blog/remote-state-en.org
    ../blog/rio-port-en.org
    ../blog/saga-dialect-jp.org
    ../blog/scala-en.org
    ../blog/subtitle-extraction-en.org
    doraemon.txt
    rashomon.txt
    iamacat.txt

source-repository head
  type: git
  location: git://github.com/fosskers/fosskers.ca.git

executable server
  default-language: Haskell2010
  main-is: Server.hs
  hs-source-dirs: ./.
  default-extensions: NoImplicitPrelude OverloadedStrings
  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -fwarn-name-shadowing -fwarn-unused-matches -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -O2 -threaded -with-rtsopts=-N
  build-depends:
      aeson >=1.2 && <1.5
    , base >=4.8 && <4.13
    , classy-prelude >=1.3 && <1.6
    , containers
    , fosskers
    , lens >=4.15 && <4.18
    , lucid >=2.9 && <2.10
    , natural-transformation >=0.4 && <0.5
    , optparse-generic >=1.2 && <1.4
    , servant >=0.11 && <0.17
    , servant-server >=0.11 && <0.17
    , shelly >=1.7 && <1.9
    , system-filepath
    , text >=1.2 && <1.3
    , wai-extra >=3.0 && <3.1
    , warp >=3.2 && <3.3
