[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
fixedbitset = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d"] }
wee_alloc = "0.4.5"

[profile.release]
opt-level = "s"
lto = true
