[package]
name = "web-effects"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlButtonElement", "Event"] }
wee_alloc = "0.4.5"

[profile.release]
opt-level = "s"
lto = true
