[package]
name = "al-bhed"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
albhed = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Event", "HtmlTextAreaElement"] }
wee_alloc = "0.4"
