[package]
version = "1.0.1"
name = "love-letter"
description = "An information tracker for Love Letter."
repository = "https://github.com/fosskers/fosskers.ca"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10"
seed = "0.9.1"
wee_alloc = "0.4"

