[package]
name = "twitch"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlButtonElement", "HtmlIFrameElement", "HtmlInputElement", "Event", "console"] }
wee_alloc = "0.4.5"
