[package]
version = "0.1.0"
name = "love-letter"
description = "An information tracker for Love Letter."
repository = "https://github.com/fosskers/fosskers.ca"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10"
seed = "0.8"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
